# GameBasedOnSFML

./: .gitignore  CLAUDE.md  CMakeLists.txt  COMPATIBILITY_REPORT.md  DEPLOY.md  README.md  SFMLGame.code-workspace  build_test.sh
Project1/: CMakeLists.txt  index.txt
Project1/.cursorrules/: prompt.md
Project1/docs/: 00_ARCHITECTURE.md  01_DATA_SCHEMA.md
Project1/docs/features/: README.md
Project1/docs/journal/: 2026-03-29-project-setup.md  README.md
Project1/include/: Component.hpp  ComponentManager.hpp  Components.hpp  Entity.hpp  EntityFactory.tmp  EntityManager.hpp  Event.hpp  EventBus.hpp  RegisterMonsters.hpp  SpawnConfig.hpp
Project1/include/Map/: MapService.hpp  Tile.hpp  TileMap.hpp
Project1/include/Systems/: CameraSystem.hpp  ChaseSystem.hpp  CombatSystem.hpp  DamageFlashSystem.hpp  InputSystem.hpp  MovementSystem.hpp  RenderSystem.hpp  SpawnerSystem.hpp  System.hpp  TileRenderSystem.hpp
Project1/src/: Entity.cpp  Entity.tmp
Project1/test/: CMakeLists.txt  maptest.cpp  test.cpp  test2.cpp  tmptest.cpp  walktest.cpp
Project2/: .gitignore  CMakeLists.txt  STATUS.md  TESTING.md  prompt.md  run.sh  settings.json
Project2/.cursorrules/: prompt.md
Project2/data/: default_keybinds.json  prefabs.json
Project2/docs/: 00_ARCHITECTURE.md  01_DATA_SCHEMA.md  CHANGELOG.md  CODE_REVIEW.md  COMPONENT_LIST.md  FIX_REPORT_PHASE1.md  KNOWN_BUGS.md  MIGRATION_GUIDE.md  MODULES.md  PLAYER_FACTORY_USAGE.md  SOP-Adding-New-State.md  TEST_MIGRATION_REPORT.md  TEST_PRINCIPLES.md  UPGRADE_v3.1.md  VERIFICATION_REPORT.md
Project2/docs/features/: F001-StateMachine.md  F002-TagSystem.md  F103-Attack.md  F104-Hurt.md  F105-Death.md  F201-Collision.md  F202-Combat-Pipeline.md  F301-Evolution.md  F601-Faction.md  README.md
Project2/docs/journal/: 2026-03-29-doc-restructure.md  README.md
Project2/include/components/: AnimationState.h  AttachedComponent.h  AttackState.h  BiomeZone.h  BombComponent.h  Character.h  ColliderComponent.h  DamageEventComponent.h  DamageTag.h  DamageTextComponent.h  DashComponent.h  DeathTag.h  DirectorState.h  EnvironmentalTag.h  Equipment.h  Evolution.h  GameState.h  Hitbox.h  Hurtbox.h  InputCommand.h  Inventory.h  ItemData.h  Lifetime.h  LootDrop.h  MagnetComponent.h  MomentumComponent.h  PickupBox.h  Position.h  RenderEvent.h  RuntimeStats.h  StatModifier.h  StateMachine.h  Stats.h  Tags.h  ThrowableComponent.h  Transform.h  ZTransformComponent.h
Project2/include/core/: Component.h  ECS.h  Entity.h  EntityFactory.h  EventQueue.h  GameJuice.h  GameWorld.h  InputManager.h
Project2/include/factories/: PlayerFactory.h
Project2/include/math/: MathUtils.h  Rect.h  Vec2.h
Project2/include/states/: AttackState.h  DeadState.h  HurtState.h  IState.h  IdleState.h  MoveState.h
Project2/include/systems/: AttachmentSystem.h  AttackSystem.h  BombSystem.h  CleanupSystem.h  CollisionSystem.h  CombatSystem.h  DamageSystem.h  DamageTextRenderSystem.h  DamageTextSpawnerSystem.h  DashSystem.h  DeathSystem.h  DebugSystem.h  InputSystem.h  LocomotionSystem.h  LootSpawnSystem.h  MagnetSystem.h  MovementSystem.h  PhysicalCollisionSystem.h  PickupSystem.h  RenderSystem.h  StateMachineSystem.h
Project2/include/utils/: CollisionTypes.h  Logging.h  Math.h  Rect.h
Project2/test/: CMakeLists.txt  attack_test.cpp  loot_pipeline_test.cpp
Project2/tests/: README.md
Project2/tests/sandbox/: CMakeLists.txt  QUICKSTART.md  README.md  VisualSandbox.cpp  VisualSandbox_README.md
Project2/tests/standalone/: README.md
Project2/tests/unit/: CMakeLists.txt  attack_test.cpp  collision_test.cpp  hurt_dead_state_test.cpp  movement_pipeline_test.cpp  run_all_tests.sh  state_machine_test.cpp  test_architecture.cpp  test_principles.h
