# Project2 测试程序
project(test)

# ✅ 已验证通过的测试
# add_executable("movement_pipeline_test" "movement_pipeline_test.cpp")
# target_link_libraries("movement_pipeline_test" Project2)

# add_executable("hurt_dead_state_test" "hurt_dead_state_test.cpp")
# target_link_libraries("hurt_dead_state_test" Project2)

# ✅ 已修复的测试
# add_executable("attack_test" "attack_test.cpp")
# target_link_libraries("attack_test" Project2)

# ⚠️ 仍需修复
# add_executable("collision_test" "collision_test.cpp")  # 需要更新 SFML 依赖
# add_executable("state_machine_test" "state_machine_test.cpp")  # 需要重构
